# Wazakita

./: .gitignore  CMakeLists.txt  run.bat  run.sh
include/: main.hpp  task.hpp
src/: main.cpp  mean.cpp  task.cpp
